vendor/bifrost/tls/bindings/x509.odin

// Copyright 1995-2016 The OpenSSL Project Authors. All Rights Reserved.
// Copyright (c) 2002, Oracle and/or its affiliates. All rights reserved.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     https://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.
package bifrost_tls

import "core:c/libc"
import "core:c"

package bifrost_tls

// BoringSSL static libraries (vendored, Linux-only for now).
@(private) LIBSSL_PATH    :: "../../boringssl/lib/libssl.a"
@(private) LIBCRYPTO_PATH :: "../../boringssl/lib/libcrypto.a"

when !#exists(LIBSSL_PATH) {
	#panic("Could not find BoringSSL at \"" + LIBSSL_PATH + "\", build it via `" + ODIN_ROOT + "vendor/boringssl/build_boringssl.sh\"`")
}
when !#exists(LIBCRYPTO_PATH) {
	#panic("Could not find BoringSSL at \"" + LIBCRYPTO_PATH + "\", build it via `" + ODIN_ROOT + "vendor/boringssl/build_boringssl.sh\"`")
}

foreign import ssl {
	LIBSSL_PATH,
}
foreign import crypto {
	LIBCRYPTO_PATH,
}


stack_st_X509          :: struct {}
sk_X509_free_func      :: proc "c" (^X509)
sk_X509_copy_func      :: proc "c" (^X509) -> ^X509
sk_X509_cmp_func       :: proc "c" (^^X509, ^^X509) -> i32
sk_X509_delete_if_func :: proc "c" (^X509, rawptr) -> i32

@(default_calling_convention="c")
foreign lib {
	// X509_up_ref adds one to the reference count of |x509| and returns one.
	X509_up_ref :: proc(x509: ^X509) -> i32 ---

	// X509_chain_up_ref returns a newly-allocated |STACK_OF(X509)| containing a
	// shallow copy of |chain|, or NULL on error. That is, the return value has the
	// same contents as |chain|, and each |X509|'s reference count is incremented by
	// one.
	X509_chain_up_ref :: proc(chain: ^stack_st_X509) -> ^stack_st_X509 ---

	// X509_dup returns a newly-allocated copy of |x509|, or NULL on error. This
	// function works by serializing the structure, so auxiliary properties (see
	// |i2d_X509_AUX|) are not preserved. Additionally, if |x509| is incomplete,
	// this function may fail.
	X509_dup :: proc(x509: ^X509) -> ^X509 ---

	// X509_free decrements |x509|'s reference count and, if zero, releases memory
	// associated with |x509|.
	X509_free :: proc(x509: ^X509) ---

	// d2i_X509 parses up to |len| bytes from |*inp| as a DER-encoded X.509
	// Certificate (RFC 5280), as described in |d2i_SAMPLE|.
	d2i_X509 :: proc(out: ^^X509, inp: ^^u8, len: c.long) -> ^X509 ---

	// X509_parse_with_algorithms parses an X.509 structure from |buf| and returns a
	// fresh X509 or NULL on error. There must not be any trailing data in |buf|.
	// The returned structure (if any) increment's |buf|'s reference count and
	// retains a reference to it.
	//
	// Only the |num_algs| algorithms from |algs| will be considered when parsing
	// the certificate's public key. If the certificate uses a different algorithm,
	// it will still be parsed, but |X509_get0_pubkey| will return NULL.
	X509_parse_with_algorithms :: proc(buf: ^CRYPTO_BUFFER, algs: ^^EVP_PKEY_ALG, num_algs: c.size_t) -> ^X509 ---

	// X509_parse_from_buffer behaves like |X509_parse_with_algorithms| but uses a
	// default algorithm list.
	X509_parse_from_buffer :: proc(buf: ^CRYPTO_BUFFER) -> ^X509 ---

	// i2d_X509 marshals |x509| as a DER-encoded X.509 Certificate (RFC 5280), as
	// described in |i2d_SAMPLE|.
	i2d_X509 :: proc(x509: ^X509, outp: ^^u8) -> i32 ---
}

// X509_VERSION_* are X.509 version numbers. Note the numerical values of all
// defined X.509 versions are one less than the named version.
X509_VERSION_1 :: 0
X509_VERSION_2 :: 1
X509_VERSION_3 :: 2

@(default_calling_convention="c")
foreign lib {
	// X509_get_version returns the numerical value of |x509|'s version, which will
	// be one of the |X509_VERSION_*| constants.
	X509_get_version :: proc(x509: ^X509) -> c.long ---

	// X509_get0_serialNumber returns |x509|'s serial number.
	X509_get0_serialNumber :: proc(x509: ^X509) -> ^ASN1_INTEGER ---

	// X509_get0_notBefore returns |x509|'s notBefore time.
	X509_get0_notBefore :: proc(x509: ^X509) -> ^ASN1_TIME ---

	// X509_get0_notAfter returns |x509|'s notAfter time.
	X509_get0_notAfter :: proc(x509: ^X509) -> ^ASN1_TIME ---

	// X509_get_issuer_name returns |x509|'s issuer.
	X509_get_issuer_name :: proc(x509: ^X509) -> ^X509_NAME ---

	// X509_get_subject_name returns |x509|'s subject.
	X509_get_subject_name :: proc(x509: ^X509) -> ^X509_NAME ---

	// X509_get_X509_PUBKEY returns the public key of |x509|. Note this function is
	// not const-correct for legacy reasons. Callers should not modify the returned
	// object.
	X509_get_X509_PUBKEY :: proc(x509: ^X509) -> ^X509_PUBKEY ---

	// X509_get0_pubkey returns |x509|'s public key as an |EVP_PKEY|, or NULL if the
	// public key was unsupported or could not be decoded. The |EVP_PKEY| is cached
	// in |x509|, so callers must not mutate the result.
	X509_get0_pubkey :: proc(x509: ^X509) -> ^EVP_PKEY ---

	// X509_get_pubkey behaves like |X509_get0_pubkey| but increments the reference
	// count on the |EVP_PKEY|. The caller must release the result with
	// |EVP_PKEY_free| when done. The |EVP_PKEY| is cached in |x509|, so callers
	// must not mutate the result.
	X509_get_pubkey :: proc(x509: ^X509) -> ^EVP_PKEY ---

	// X509_get0_pubkey_bitstr returns the BIT STRING portion of |x509|'s public
	// key. Note this does not contain the AlgorithmIdentifier portion.
	//
	// WARNING: This function returns a non-const pointer for OpenSSL compatibility,
	// but the caller must not modify the resulting object. Doing so will break
	// internal invariants in |x509|.
	X509_get0_pubkey_bitstr :: proc(x509: ^X509) -> ^ASN1_BIT_STRING ---

	// X509_check_private_key returns one if |x509|'s public key matches |pkey| and
	// zero otherwise.
	X509_check_private_key :: proc(x509: ^X509, pkey: ^EVP_PKEY) -> i32 ---

	// X509_get0_uids sets |*out_issuer_uid| to a non-owning pointer to the
	// issuerUID field of |x509|, or NULL if |x509| has no issuerUID. It similarly
	// outputs |x509|'s subjectUID field to |*out_subject_uid|.
	//
	// Callers may pass NULL to either |out_issuer_uid| or |out_subject_uid| to
	// ignore the corresponding field.
	X509_get0_uids :: proc(x509: ^X509, out_issuer_uid: ^^ASN1_BIT_STRING, out_subject_uid: ^^ASN1_BIT_STRING) ---
}

// The following bits are returned from |X509_get_extension_flags|.

// EXFLAG_BCONS indicates the certificate has a basic constraints extension.
EXFLAG_BCONS :: 0x1

// EXFLAG_KUSAGE indicates the certificate has a key usage extension.
EXFLAG_KUSAGE :: 0x2

// EXFLAG_XKUSAGE indicates the certificate has an extended key usage extension.
EXFLAG_XKUSAGE :: 0x4

// EXFLAG_CA indicates the certificate has a basic constraints extension with
// the CA bit set.
EXFLAG_CA :: 0x10

// EXFLAG_SI indicates the certificate is self-issued, i.e. its subject and
// issuer names match.
EXFLAG_SI :: 0x20

// EXFLAG_V1 indicates an X.509v1 certificate.
EXFLAG_V1 :: 0x40

// EXFLAG_INVALID indicates an error processing some extension. The certificate
// should not be accepted. Note the lack of this bit does not imply all
// extensions are valid, only those used to compute extension flags.
EXFLAG_INVALID :: 0x80

// EXFLAG_SET is an internal bit that indicates extension flags were computed.
EXFLAG_SET :: 0x100

// EXFLAG_CRITICAL indicates an unsupported critical extension. The certificate
// should not be accepted.
EXFLAG_CRITICAL :: 0x200

// EXFLAG_SS indicates the certificate is likely self-signed. That is, if it is
// self-issued, its authority key identifier (if any) matches itself, and its
// key usage extension (if any) allows certificate signatures. The signature
// itself is not checked in computing this bit.
EXFLAG_SS :: 0x2000

@(default_calling_convention="c")
foreign lib {
	// X509_get_extension_flags decodes a set of extensions from |x509| and returns
	// a collection of |EXFLAG_*| bits which reflect |x509|. If there was an error
	// in computing this bitmask, the result will include the |EXFLAG_INVALID| bit.
	X509_get_extension_flags :: proc(x509: ^X509) -> u32 ---

	// X509_get_pathlen returns path length constraint from the basic constraints
	// extension in |x509|. (See RFC 5280, section 4.2.1.9.) It returns -1 if the
	// constraint is not present, or if some extension in |x509| was invalid.
	//
	// TODO(crbug.com/boringssl/381): Decoding an |X509| object will not check for
	// invalid extensions. To detect the error case, call
	// |X509_get_extension_flags| and check the |EXFLAG_INVALID| bit.
	X509_get_pathlen :: proc(x509: ^X509) -> c.long ---
}

// X509v3_KU_* are key usage bits returned from |X509_get_key_usage|.
X509v3_KU_DIGITAL_SIGNATURE :: 0x0080
X509v3_KU_NON_REPUDIATION   :: 0x0040
X509v3_KU_KEY_ENCIPHERMENT  :: 0x0020
X509v3_KU_DATA_ENCIPHERMENT :: 0x0010
X509v3_KU_KEY_AGREEMENT     :: 0x0008
X509v3_KU_KEY_CERT_SIGN     :: 0x0004
X509v3_KU_CRL_SIGN          :: 0x0002
X509v3_KU_ENCIPHER_ONLY     :: 0x0001
X509v3_KU_DECIPHER_ONLY     :: 0x8000

@(default_calling_convention="c")
foreign lib {
	// X509_get_key_usage returns a bitmask of key usages (see Section 4.2.1.3 of
	// RFC 5280) which |x509| is valid for. This function only reports the first 16
	// bits, in a little-endian byte order, but big-endian bit order. That is, bits
	// 0 though 7 are reported at 1<<7 through 1<<0, and bits 8 through 15 are
	// reported at 1<<15 through 1<<8.
	//
	// Instead of depending on this bit order, callers should compare against the
	// |X509v3_KU_*| constants.
	//
	// If |x509| has no key usage extension, all key usages are valid and this
	// function returns |UINT32_MAX|. If there was an error processing |x509|'s
	// extensions, or if the first 16 bits in the key usage extension were all zero,
	// this function returns zero.
	X509_get_key_usage :: proc(x509: ^X509) -> u32 ---
}

// XKU_* are extended key usage bits returned from
// |X509_get_extended_key_usage|.
XKU_SSL_SERVER :: 0x1
XKU_SSL_CLIENT :: 0x2
XKU_SMIME      :: 0x4
XKU_CODE_SIGN  :: 0x8
XKU_SGC        :: 0x10
XKU_OCSP_SIGN  :: 0x20
XKU_TIMESTAMP  :: 0x40
XKU_DVCS       :: 0x80
XKU_ANYEKU     :: 0x100

@(default_calling_convention="c")
foreign lib {
	// X509_get_extended_key_usage returns a bitmask of extended key usages (see
	// Section 4.2.1.12 of RFC 5280) which |x509| is valid for. The result will be
	// a combination of |XKU_*| constants. If checking an extended key usage not
	// defined above, callers should extract the extended key usage extension
	// separately, e.g. via |X509_get_ext_d2i|.
	//
	// If |x509| has no extended key usage extension, all extended key usages are
	// valid and this function returns |UINT32_MAX|. If there was an error
	// processing |x509|'s extensions, or if |x509|'s extended key usage extension
	// contained no recognized usages, this function returns zero.
	X509_get_extended_key_usage :: proc(x509: ^X509) -> u32 ---

	// X509_get0_subject_key_id returns |x509|'s subject key identifier, if present.
	// (See RFC 5280, section 4.2.1.2.) It returns NULL if the extension is not
	// present or if some extension in |x509| was invalid.
	//
	// TODO(crbug.com/boringssl/381): Decoding an |X509| object will not check for
	// invalid extensions. To detect the error case, call
	// |X509_get_extension_flags| and check the |EXFLAG_INVALID| bit.
	X509_get0_subject_key_id :: proc(x509: ^X509) -> ^ASN1_OCTET_STRING ---
